Bug 692641: Misc build fixes for static systems

Patch contributed by Alan Hourihane ( alanh@fairlite.co.uk ) to improve
compatibility with system which need static linking. So disable dynmic devices
unless they explicitly enabled, rename our internal SHA functions so they don't
clash when libssl is linked in.

Finally, a fix so configure doesn't assume pkgconfig availability (although it
is widely available, it is not "standard").

No cluster differences.